--- a/styles/Team.scss
+++ b/styles/Team.scss
@@ -28,7 +28,6 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      backdrop-filter: blur(10px);
       animation: page-transition 300ms ease-in-out;
 
       .content {
@@ -37,7 +36,6 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        opacity: 0.7;
         transition: 0.5s;
 
         .imgBox {
@@ -112,7 +110,6 @@
 
     .person:hover {
       .content {
-        opacity: 1;
         transform: translateY(-20px);
       }
 
